<resources>
    <string name="app_name">WanAndroid</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="search_by_nickname_hint">按照作者昵称搜索文章，不支持模糊匹配</string>
    <string name="search_by_key_hint">支持多个关键词，用空格隔开</string>
    <string name="search_no_value">未搜索到结果</string>
    <string name="input_key_to_search">输入关键字以搜索</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="login_succeed">登录成功</string>
    <string name="please_input_re_password">请输入确认密码</string>
    <string name="register">注册</string>
    <string name="goto_register">去注册</string>
    <string name="goto_login">去登陆</string>
    <string name="inputed_password_not_same">输入密码不一致</string>
    <string name="collect">收藏</string>
    <string name="my_collect">我的收藏</string>
    <string name="newest_project">最新项目</string>
    <string name="square">广场</string>
    <string name="home">首页</string>
    <string name="ask_per_day">每日一问</string>
    <string name="take_a_search">搜一搜</string>
    <string name="system_knowledge">体系</string>
    <string name="top_article">置顶</string>
    <string name="canceled_collect">已取消收藏</string>
    <string name="collected">已收藏</string>
    <string name="had_read">已读</string>
    <string name="had_read_local_save">已读（本地保存）</string>
</resources>
