<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_had_read"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/had_read" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/take_a_search" />

        <item
            android:id="@+id/nav_system"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/system_knowledge" />

        <item
            android:id="@+id/nav_square"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/square" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_newest_project"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/newest_project" />

    </group>
</menu>
