<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ayvytr.wanandroid.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/nav_goto_login"
            app:destination="@id/nav_login">
            <argument
                android:name="isLogin"
                android:defaultValue="true"
                app:argType="boolean" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_system"
        android:name="com.ayvytr.wanandroid.ui.system.SystemFragment"
        android:label="@string/system_knowledge">

        <action
            android:id="@+id/nav_goto_system_list"
            app:destination="@id/nav_system_list">
<!--            <argument-->
<!--                android:name="id"-->
<!--                app:argType="integer" />-->
            <argument
                android:name="systemTree"
                app:argType="com.ayvytr.wanandroid.bean.SystemTree" />
            <argument
                android:name="category"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_system_list"
        android:name="com.ayvytr.wanandroid.ui.system.SystemListFragment"
        android:label="@string/system_knowledge">
<!--        <argument-->
<!--            android:name="id"-->
<!--            app:argType="integer" />-->
        <argument
            android:name="systemTree"
            app:argType="com.ayvytr.wanandroid.bean.SystemTree" />
        <argument
            android:name="category"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_newest_project"
        android:name="com.ayvytr.wanandroid.ui.project.ProjectFragment"
        android:label="@string/newest_project" />

    <fragment
        android:id="@+id/nav_square"
        android:label="@string/square"
        android:name="com.ayvytr.wanandroid.ui.square.SquareFragment" />

    <fragment
        android:id="@+id/nav_search"
        android:label="@string/take_a_search"
        android:name="com.ayvytr.wanandroid.uisearch.SearchFragment" />


    <fragment
        android:id="@+id/nav_login"
        android:name="com.ayvytr.wanandroid.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <!--        <action-->
        <!--            android:id="@+id/nav_goto_login"-->
        <!--            app:destination="@id/nav_login">-->
        <!--            <argument-->
        <!--                android:name="isLogin"-->
        <!--                android:defaultValue="false"-->
        <!--                app:argType="boolean" />-->
        <!--        </action>-->
    </fragment>

    <fragment
        android:id="@+id/nav_collect"
        android:name="com.ayvytr.wanandroid.ui.collect.MyCollectFragment"
        android:label="@string/my_collect" />
</navigation>